[gd_scene format=3 uid="uid://le6hndqkbqdg"]

[ext_resource type="Script" uid="uid://cyg18s6ut6742" path="res://addons/performance_monitor/performance_panel.gd" id="1_panel"]

[node name="PerformancePanel" type="Control" unique_id=2100481718]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=124805928]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Toolbar" type="HBoxContainer" parent="VBoxContainer" unique_id=1864086281]
layout_mode = 2

[node name="FilterLabel" type="Label" parent="VBoxContainer/Toolbar" unique_id=1871817237]
layout_mode = 2
text = "Filter:"

[node name="FilterOption" type="OptionButton" parent="VBoxContainer/Toolbar" unique_id=15323971]
layout_mode = 2
size_flags_horizontal = 0
selected = 0
item_count = 12
popup/item_0/text = "All"
popup/item_0/id = 0
popup/item_1/text = "FRAME"
popup/item_1/id = 1
popup/item_2/text = "Building"
popup/item_2/id = 2
popup/item_3/text = "Chunk"
popup/item_3/id = 3
popup/item_4/text = "Vegetation"
popup/item_4/id = 4
popup/item_5/text = "Entities"
popup/item_5/id = 5
popup/item_6/text = "Save"
popup/item_6/id = 6
popup/item_7/text = "Vehicles"
popup/item_7/id = 7
popup/item_8/text = "Player"
popup/item_8/id = 8
popup/item_9/text = "Roads"
popup/item_9/id = 9
popup/item_10/text = "Water"
popup/item_10/id = 10
popup/item_11/text = "Config"
popup/item_11/id = 11

[node name="ClearButton" type="Button" parent="VBoxContainer/Toolbar" unique_id=1513677155]
layout_mode = 2
text = "Clear"

[node name="Sep1" type="VSeparator" parent="VBoxContainer/Toolbar" unique_id=1758823804]
layout_mode = 2

[node name="FrameTimeLabel" type="Label" parent="VBoxContainer/Toolbar" unique_id=1848292725]
layout_mode = 2
text = "Frame:"

[node name="FrameTimeSpinBox" type="SpinBox" parent="VBoxContainer/Toolbar" unique_id=2088667895]
layout_mode = 2
min_value = 1.0
max_value = 200.0
value = 20.0
suffix = "ms"

[node name="Sep2" type="VSeparator" parent="VBoxContainer/Toolbar" unique_id=109462157]
layout_mode = 2

[node name="ChunkLabel" type="Label" parent="VBoxContainer/Toolbar" unique_id=1016515374]
layout_mode = 2
text = "Chunk:"

[node name="ChunkSpinBox" type="SpinBox" parent="VBoxContainer/Toolbar" unique_id=170958531]
layout_mode = 2
min_value = 0.1
max_value = 50.0
step = 0.1
value = 3.0
suffix = "ms"

[node name="Sep3" type="VSeparator" parent="VBoxContainer/Toolbar" unique_id=1469949890]
layout_mode = 2

[node name="VegLabel" type="Label" parent="VBoxContainer/Toolbar" unique_id=397972493]
layout_mode = 2
text = "Veg:"

[node name="VegSpinBox" type="SpinBox" parent="VBoxContainer/Toolbar" unique_id=1019131419]
layout_mode = 2
min_value = 0.1
max_value = 50.0
step = 0.1
value = 2.0
suffix = "ms"

[node name="ResetButton" type="Button" parent="VBoxContainer/Toolbar" unique_id=179591618]
layout_mode = 2
text = "Reset"

[node name="Spacer" type="Control" parent="VBoxContainer/Toolbar" unique_id=524874621]
layout_mode = 2
size_flags_horizontal = 3

[node name="SpikeCountLabel" type="Label" parent="VBoxContainer/Toolbar" unique_id=512683656]
layout_mode = 2
text = "Spikes: 0"

[node name="LogList" type="RichTextLabel" parent="VBoxContainer" unique_id=1645362222]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 2
bbcode_enabled = true
scroll_following = true
selection_enabled = true
